# golang

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  go.mod  go.sum  go_proto_gen.sh
pkg/cgo/: CMakeLists.txt
pkg/cgo/api/openapi-spec/: proto.gen.go
pkg/cgo/api/openapi-spec/gocv/: gocv.magick.pb.cc  gocv.magick.pb.h
pkg/cgo/api/openapi-spec/gocv/v1/: CMakeLists.txt  gocv.magick.pb.cc  gocv.magick.pb.go  gocv.magick.pb.h  gocv.magick.proto
pkg/cgo/api/openapi-spec/types/: CMakeLists.txt  sdk-go.types.pb.go  sdk-go.types.pb.h
pkg/cgo/api/openapi-spec/types/code/: code.error.go  sdk-go.code.pb.cc.old  sdk-go.code.pb.go  sdk-go.code.pb.h  sdk-go.code.proto
pkg/cgo/cmake/: FindProtobuf.cmake
pkg/cgo/gocv/: Makefile  gocv.go  gocv_test.go  magick.h  magick_linux_amd64.cpp  magick_linux_amd64.go  rect.go  rect_test.go
pkg/cgo/pkgconfig/: graphics-magick.pc  protobuf.pc
pkg/cgo/third_path/graphics-magick/include/Magick++/: Color.h  Include.h  STL.h
pkg/cgo/third_path/graphics-magick/include/magick/: api.h  command.h  delegate.h  fx.h  log.h  magick.h  module.h  monitor.h  pixel_cache.h  pixel_iterator.h  quantize.h  resize.h  statistics.h  symbols.h  type.h
pkg/cgo/third_path/graphics-magick/include/wand/: pixel_wand.h
pkg/cgo/third_path/graphics-magick/lib/: libGraphicsMagick++.so.12.4.3  libGraphicsMagick.so.3
pkg/cgo/third_path/graphics-magick/lib/pkgconfig/: GraphicsMagick++.pc
pkg/gocv/cgo/api/openapi-spec/: CMakeLists.txt  Makefile  proto.gen.go  thirdparty.cmake  thirdparty.srv.cmake
script/: copyright.sh  copyright.txt  (+1 more)
(+1080 files in other folders)
